crates/math-core/tests/snapshots/wiki_test__wiki097.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\amalg \\P \\S \\% \\dagger\\ddagger\\ldots\\cdots"
---
<math>
    <mo lspace="0">⨿</mo>
    <mi>¶</mi>
    <mi>§</mi>
    <mi>%</mi>
    <mo lspace="0.2222em" rspace="0.2222em">†</mo>
    <mo lspace="0" rspace="0">‡</mo>
    <mo lspace="0">.</mo>
    <mo lspace="0" rspace="0.1667em">.</mo>
    <mo lspace="0">.</mo>
    <mo>·</mo>
    <mo lspace="0" rspace="0.1667em">·</mo>
    <mo lspace="0" rspace="0">·</mo>
</math>
