crates/math-core/tests/snapshots/wiki_test__wiki101.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\eqcirc \\circeq \\triangleq \\bumpeq\\Bumpeq \\doteqdot \\risingdotseq \\fallingdotseq"
---
<math>
    <mo lspace="0" rspace="0">≖</mo>
    <mo lspace="0" rspace="0">≗</mo>
    <mo lspace="0" rspace="0">≜</mo>
    <mo lspace="0" rspace="0">≏</mo>
    <mo lspace="0" rspace="0">≎</mo>
    <mo lspace="0" rspace="0">≑</mo>
    <mo lspace="0" rspace="0">≓</mo>
    <mo lspace="0" rspace="0">≒</mo>
</math>
