crates/math-core/tests/snapshots/wiki_test__wiki102.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\intercal \\barwedge \\veebar \\doublebarwedge \\between \\pitchfork"
---
<math>
    <mo lspace="0" rspace="0">⊺</mo>
    <mo>⊼</mo>
    <mo lspace="0" rspace="0">⊻</mo>
    <mo lspace="0" rspace="0">⩞</mo>
    <mo rspace="0">≬</mo>
    <mo lspace="0" rspace="0">⋔</mo>
</math>
