crates/math-core/tests/snapshots/wiki_test__wiki103.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\vartriangleleft \\ntriangleleft \\vartriangleright \\ntriangleright"
---
<math>
    <mo lspace="0" rspace="0">⊲</mo>
    <mo lspace="0" rspace="0">⋪</mo>
    <mo lspace="0" rspace="0">⊳</mo>
    <mo lspace="0" rspace="0">⋫</mo>
</math>
