crates/math-core/tests/snapshots/wiki_test__wiki104.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\trianglelefteq \\ntrianglelefteq \\trianglerighteq \\ntrianglerighteq"
---
<math>
    <mo lspace="0" rspace="0">⊴</mo>
    <mo lspace="0" rspace="0">⋬</mo>
    <mo lspace="0" rspace="0">⊳</mo>
    <mo lspace="0" rspace="0">⋭</mo>
</math>
